# Costing

./: .dockerignore  .gitignore  Competitors and items.xlsx  Comtetitors and items.xlsx  Dockerfile  README.md  compare.xlsx  docker-compose.yaml  links.txt  pyproject.toml  requirements.txt
boost/: Costing hidden boost.bat  Costing.bat  script.ps1
instance/: db.sqlite
project/: README.md  __init__.py  app.py  async_search.py  auth.py  autoload_results.json  class_template.txt  connection_req.py  credentials.py  database.py  db_manager.py  db_manager_v2.py  emails.py  file_manager.py  helpers.py  helpers_v2.py  interfaces.py  main.py  managers.py  models.py  request_connection.py  request_email_template.txt  scraper_template.py  server.py  systems.py  test.py
project/corpotate_scrapers/: company_info_search.py  search_company.py  stomart_async.py  stomart_sync.py
project/search_files/: async_search.py  get_classes.py  search_company.py  stomart_async.py
project/static/: compare.js  competitors.js  goods.js  homepage.js  price_looker.js  profile.js  signup.js  style.css
project/templates/: company-goods.html  comparison.html  competitor-monitoring.html  homepage.html  layout.html  login.html  price-looker-results.html  price-looker.html  price-looker_layout.html  profile.html  signup.html
project/text_templates/: class_template.txt  request_connect_template.txt
project/trash/: dentex.py  stomatorg.py  stomshop.py
project/web_scrapers/: company_info_search.py  denticom.py  stomart.py  stomart_async.py  stomart_async2.py  (+4 more)
templates/: layout.html  sighup.html
(+29 files in other folders)
