[project]
name = "costing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.5",
    "bs4>=0.0.2",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=25.3.0",
    "requests>=2.33.1",
    "selenium>=4.41.0",
    "validators>=0.35.0",
]
